--- a/cloud-114/src/main/resources/application.yml
+++ b/cloud-114/src/main/resources/application.yml
@@ -1,5 +1,21 @@
-server:
+server: 
   port: 8761
-spring:
-  application:
+spring: 
+  application: 
     name: cloud-114
+  profiles: slave1
+eureka:
+  client: 
+    service-url: 
+      defaultZone: http://localhost:8762/eureka/   
+--- 
+server: 
+  port: 8762
+spring: 
+  application: 
+    name: cloud-114
+  profiles: slave2
+eureka:
+  client: 
+    service-url: 
+      defaultZone: http://localhost:8761/eureka/
