--- a/cloud-114/src/main/resources/application.yml
+++ b/cloud-114/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 eureka:
   client: 
     service-url: 
-      defaultZone: http://localhost:8762/eureka/   
+      defaultZone:  http://slave2:8762/eureka/   
 --- 
 server: 
   port: 8762
@@ -18,4 +18,4 @@ spring:
 eureka:
   client: 
     service-url: 
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://slave1:8761/eureka/
